Fix CSS bugs on mobile version

--- a/main.css
+++ b/main.css
@@ -139,6 +139,20 @@ ul {
     font-size: 13px;
   }
 
+  h1 {
+    font-size: 5rem;
+    line-height: .9em;
+  }
+
+  h2 {
+    font-size: 3rem;
+    line-height: .95em;
+  }
+
+  h3 {
+    line-height: 1em;
+  }
+
 }
 
 /* -------- Base -------- */
@@ -226,7 +240,7 @@ body.header-open {
 
 .button.square:focus::after {
   bottom: -.4em;
-}   
+}
 
 /* .button:focus::after, .store-buttons a:focus::after { */
 /*  border: none; */
@@ -251,10 +265,12 @@ body.header-open {
 .store-buttons {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .store-buttons a {
   margin-right: 13px;
+  margin-bottom: .5em;
 }
 
 .store-buttons a:last-of-type {
@@ -421,6 +437,14 @@ body.header-open {
   margin: 1.2em 0;
 }
 
+@media all and (max-width: 730px) {
+
+  .hero {
+    padding-top: 5rem;
+  }
+
+}
+
 /* -------- Use cases -------- */
 
 .use-cases {
@@ -514,6 +538,20 @@ body.header-open {
    .use-case-detail p {
      /* height: 12em; */
    }
+
+}
+
+@media all and (max-width: 670px) {
+
+  .use-case-details {
+    margin-bottom: 0;
+  }
+
+  .use-case-detail {
+    width: 100%;
+    margin-bottom: 2em;
+    justify-content: space-evenly;
+  }
 
 }
 
@@ -637,6 +675,7 @@ body.header-open {
 
   .feature-description-detail {
     font-size: 1rem;
+    width: 48%;
   }
 
   .feature-description:nth-child(2) {
@@ -729,7 +768,7 @@ body.header-open {
   }
 
   .stat {
-    width: 50%;
+    width: 45%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -742,6 +781,11 @@ body.header-open {
     left: 0;
     transform: none;
     margin-top: 1em;
+    font-size: 1.2rem;
+  }
+
+  .stat img {
+    width: 100%;
   }
 
   .stat-4, .stat-5 {
@@ -835,6 +879,7 @@ body.header-open {
 .slide img {
   margin: 0 auto 2.5em auto;
   display: block;
+  max-width: 100%;
 }
 
 blockquote p {
@@ -903,12 +948,26 @@ cite {
 
 @media all and (max-width: 730px) {
 
+  .testimonials header a {
+    text-align: center;
+  }
+
   .slider {
     background-size: 80%;
+    margin: 3rem 0 4rem 0;
   }
 
   .slide {
+    grid-column: span 12;
     padding: 2em 2.5em 2.2em 2.5em;
+  }
+
+  blockquote p {
+    font-size: 1.2rem;
+  }
+
+  cite {
+    font-size: .9rem;
   }
 
   .partners {
@@ -950,6 +1009,14 @@ cite {
 
   .cta h2, .cta .store-buttons {
     grid-column: 3 / span 8;
+  }
+
+}
+
+@media all and (max-width: 730px) {
+
+  .cta h2 {
+    margin-bottom: 1em;
   }
 
 }
@@ -1047,12 +1114,24 @@ cite {
   .footer-links {
     width: 100%;
     order: 1;
-    margin: 2em 3em;
+    margin: 2em 0;
+    flex-wrap: wrap;
+  }
+
+  .footer-links a {
+    width: 50%;
+    text-align: center;
   }
 
   .copyright {
     order: 2;
     width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .copyright a, .copyright p {
+    margin: 0;
   }
 
 }
